[workspace]
members = [
  "governance/addin-mock/program",
  "governance/addin-api",
  "governance/program",
  "governance/test-sdk",
  "governance/tools",
  "governance/chat/program",
]
exclude = [
  "farms/farm-client",
  "farms/farm-ctrl",
  "farms/farm-rpc",
  "farms/farm-sdk",
  "farms/fund",
  "farms/router-main",
  "farms/router-raydium",
  "farms/router-saber",
  "farms/router-orca",
  "farms/vaults",
  "libraries/math",
  "memo/program",
  "name-service/program",
  "record/program",
  "shared-memory/program",
  "stake-pool/cli",
  "stake-pool/program",
  "stateless-asks/program",
  "token-lending/cli",
  "token-lending/program",
  "token-swap/program",
  "token-swap/program/fuzz",
  "token/cli",
  "token/program",
  "token/program-2022",
  "token/program-2022-test",
  "token/client",
  "utils/cgen",
  "utils/test-client",
  "token-lending/flash_loan_receiver",
  "associated-token-account/program",
  "binary-option/program",
  "binary-oracle-pair/program",
  "examples/rust/cross-program-invocation",
  "examples/rust/custom-heap",
  "examples/rust/logging",
  "examples/rust/sysvar",
  "examples/rust/transfer-lamports",
  "feature-proposal/program",
  "feature-proposal/cli",

]

[profile.dev]
split-debuginfo = "unpacked"
