[package]
name = "spl-governance"
version = "3.0.0"
description = "Solana Program Library Governance Program"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
arrayref = "0.3.6"
bincode = "1.3.2"
borsh = "0.9.1"
num-derive = "0.3"
num-traits = "0.2"
serde = "1.0.130"
serde_derive = "1.0.103"
solana-program = "1.14.12"
spl-token = { version = "3.3", features = [ "no-entrypoint" ] }
spl-governance-tools= { version = "0.1.2", path ="../tools"}
spl-governance-addin-api= { version = "0.1.2", path ="../addin-api"}
thiserror = "1.0"
itertools = "0.10.3"
upl-delegation-manager = { version = "0.1.1", features = ["no-entrypoint"] }

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
proptest = "1.0"
solana-program-test = "1.14.12"
solana-sdk = "1.14.12"
spl-governance-test-sdk = { version = "0.1.2", path ="../test-sdk"}
spl-governance-addin-mock = { version = "0.1.2", path ="../addin-mock/program"}


[lib]
crate-type = ["cdylib", "lib"]
